prom/prom-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom
  labels:
    app: kube-prometheus-stack-prometheus
spec:
  rules:
    - host: prom.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix
